=============================================
NetworkManager-1.58
Overview of changes since NetworkManager-1.56
=============================================

This is a snapshot of NetworkManager development. The API is
subject to change and not guaranteed to be compatible with
the later release.
USE AT YOUR OWN RISK.  NOT RECOMMENDED FOR PRODUCTION USE!

* Unify the versioning to use everywhere the scheme with the -rcX or -dev
  suffixes when appropriate. This affects, for example, the URL and filename
  of the release tarball and the version reported by nmcli and the daemon.
  As an exception, the C API will continue to use the 90+ scheme for RC versions.
* Restrict the connectivity check to use the DNS servers defined on the
  same link. If the link has no DNS servers, the connectivity check will
  use any servers available in the system.
* Install the systemd units in the initramfs using a systemd generator.
* A new "check-connectivity" configuration option is available to disable the
  connectivity check for selected interfaces.
* Remove the modify_system build option that allowed setting up the
  polkit permissions to allow non-admin users to create system-wide
  connection. That configuration is discouraged because it can be used
  to bypass filesystem permissions.
* For private connections (the ones that specify a user in the
  "connection.permissions" property), verify that the user can access
  the 802.1X certificates and keys set in the connection.
* Introduce a libnm function that can be used by VPN plugins to check
  user permissions on certificate and keys.
* The support for Wireless Extensions is deprecated and will be
  removed in a future release. Wireless Extensions are now disabled by
  default.
* Use an internal implementation of the ping functionality when the
  "connection.gateway-ping-timeout" or "connection.ip-ping-addresses"
  properties are set, instead of relying on the "ping" tool.  